--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   },
   "author": "",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "discord.js": "^14.1.2",
+    "dotenv": "^16.0.1",
+    "knex": "^2.2.0"
+  }
 }
