--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
+    "@discordjs/rest": "^1.0.1",
+    "discord-api-types": "^0.37.1",
     "discord.js": "^14.1.2",
     "dotenv": "^16.0.1",
     "knex": "^2.2.0"
